  * Dropped support for ruby versions before 2.7

2022-01-07 Jason Frey <fryguy9@gmail.com>
  * Ship version 1.2.2

  * Switched to GitHub actions and add testing of Rubies up to Ruby 3.0
  * Fixed issue with keep_duplicate_arrays when merging into a nil array. Thanks ALTinners!
  * Added documentation for keep_duplicate_arrays

2017-11-16 Jason Frey <fryguy9@gmail.com>
  * Ship version 1.2.1

  * Fixed release date in the gemspec.

2017-11-16 Jason Frey <fryguy9@gmail.com>
  * Ship version 1.2.0

2017-04-25 Joe Rafaniello <jrafanie@redhat.com>
  * Merge nil values or keep the original via an option

2016-08-01 Jason Frey <fryguy9@gmail.com>
  * Ship version 1.1.1

  * Fixed release date in the gemspec.

2016-08-01 Jason Frey <fryguy9@gmail.com>
  * Ship version 1.1.0

  * Add testing for newer Ruby 2.2, 2.3, head, and jruby-head.

2016-06-14 Michael Sievers <michael_sievers@web.de>
  * Add extend_existing_arrays option

2016-06-07 Jason Frey <fryguy9@gmail.com>
  * Add overwrite_arrays option

2016-04-08 Dan Deleo <dan@kallistec.com>
  * Remove support for old Ruby 1.8 and 1.9

2014-01-21 Dan DeLeo <dan@kallistec.com>
  * Ship version 1.0.1

  * Update knockout behavior to better handle nil (b7de40b5)

2011-08-15 Dan DeLeo <dan@kallistec.com>
  * Document how to use w/ Rails 3 via Bundler

2011-07-28 Dan DeLeo <dan@kallistec.com>
  * Use a plain ol' gemspec and Rakefile for gem creation

  * Ship version 1.0.0

2011-05-23  Joe Van Dyk <joe@fixieconsulting.com>

  * Added Changelog

2011-05-18  Joe Van Dyk <joe@fixieconsulting.com>

  * Merging empty strings should work if String#blank? is defined.

  * Use unix line endings

  * Removing extra whitespace

2010-01-11  Dan DeLeo <dan@kallistec.com>

  * fix boolean merging according to mdkent's patch explicitly test 
    for nils w/ #nil? instead of negating. Thanks mdkent!

2009-12-25  Dan DeLeo <dan@kallistec.com>

  * miscellaneous cleanup

  * make rails/active_support compat optional
